# 2_stage_loan_approval_-_prediction_system

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml.backup  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
models/: best_randomforest_fine_tuned_classification_model.pkl  best_xgboost_fine_tuned_regression_model.pkl  imputation_values.joblib  label_encoders.joblib  power_transformer.pkl  scaler.pkl
notebook/: 1_sepration.ipynb  2_EDA.ipynb  3_cleaning_&_feature_engineering.ipynb  4a_regression_train.ipynb  4b_classification_train.ipynb  5a_regression_fine_tune.ipynb  5b_classification_fine_tuning.ipynb
src/inference_pipeline/: inference.py
src/ingestion_pipeline/: ingestion.py
src/training_pipeline/: training_classification.py  training_regression.py  tuning_classification.py  tuning_regression.py
