[project]
name = "2-stage-loan-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "gradio>=6.5.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlflow>=3.9.0",
    "numpy>=2.2.6",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pandas-profiling>=3.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
    "yellowbrick>=1.5",
]
